[package]
name = "rustboy"
version = "0.5.0"
authors = ["coopersimon <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

[lib]
name = "rustboy"
path = "src/lib.rs"

[features]
debug = []

[dependencies]
bitflags = "1.1"
chrono = "0.4"

[target.'cfg(not(target_os = "ios"))'.dependencies]
cpal = "0.11"

[target.'cfg(target_os = "ios")'.dependencies]
coreaudio-rs = "0.9.1"
