[package]
name = "rustboy"
version = "0.8.0"
authors = ["coopersimon <simon.d.cooper@hotmail.co.uk>"]
edition = "2018"

[lib]
name = "rustboy"
path = "src/lib.rs"

[dependencies]
bitflags = "1.1"
chrono = "0.4"
crossbeam-channel = "0.4.2"

[dependencies.dasp]
version = "0.11"
features = ["interpolate", "interpolate-sinc", "ring_buffer", "signal"]

[features]
default = ["threads"]
debug = []
threads = []
